# altyazi_cikarici

./: .gitignore  README.md  RULES.md  colab_alt_yazi_cikarici.ipynb  pyproject.toml  transcribe_srt.py
src/altyazi_cikarici/: cli.py  constants.py  downloader.py  main.py  transcriber.py  utils.py
tests/: test_utils.py
