[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "altyazi-cikarici"
version = "0.1.0"
description = "Academic lecture video downloader and transcription pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kayra" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "faster-whisper>=1.2.1",
    "httpx>=0.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
alt-yazi-cikarici = "altyazi_cikarici.main:main"

[tool.setuptools.packages.find]
where = ["src"]
